Features | Photo Gallery full size
on click opens full size photo on new tab

--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
                     </header>
                         <image class="grid__container">
                             <div class="grid__container--grid">
-                                <div class="grid__container--grid-items-container"><img class="grid__container--grid-items" src="./assets/images/gallery/photo-gallery-1.jpg" alt=""></div>
-                                <div class="grid__container--grid-items-container"><img class="grid__container--grid-items" src="./assets/images/gallery/photo-gallery-2.jpg" alt=""></div>
-                                <div class="grid__container--grid-items-container"><img class="grid__container--grid-items" src="./assets/images/gallery/photo-gallery-3.jpg" alt=""></div>
-                                <div class="grid__container--grid-items-container"><img class="grid__container--grid-items" src="./assets/images/gallery/photo-gallery-4.jpg" alt=""></div>
-                                <div class="grid__container--grid-items-container"><img class="grid__container--grid-items" src="./assets/images/gallery/photo-gallery-5.jpg" alt=""></div>
-                                <div class="grid__container--grid-items-container"><img class="grid__container--grid-items" src="./assets/images/gallery/photo-gallery-6.jpg" alt=""></div>
-                                <div class="grid__container--grid-items-container"><img class="grid__container--grid-items" src="./assets/images/gallery/photo-gallery-7.jpg" alt=""></div>
-                                <div class="grid__container--grid-items-container"><img class="grid__container--grid-items" src="./assets/images/gallery/photo-gallery-8.jpg" alt=""></div>
-                                <div class="grid__container--grid-items-container"><img class="grid__container--grid-items" src="./assets/images/gallery/photo-gallery-9.jpg" alt=""></div>
+                                <div class="grid__container--grid-items-container"><a target="_blank" href="./assets/images/gallery/photo-gallery-1.jpg"><img class="grid__container--grid-items" src="./assets/images/gallery/photo-gallery-1.jpg" alt=""></a></div>
+                                <div class="grid__container--grid-items-container"><a target="_blank" href="./assets/images/gallery/photo-gallery-2.jpg"><img class="grid__container--grid-items" src="./assets/images/gallery/photo-gallery-2.jpg" alt=""></a></div>
+                                <div class="grid__container--grid-items-container"><a target="_blank" href="./assets/images/gallery/photo-gallery-3.jpg"><img class="grid__container--grid-items" src="./assets/images/gallery/photo-gallery-3.jpg" alt=""></a></div>
+                                <div class="grid__container--grid-items-container"><a target="_blank" href="./assets/images/gallery/photo-gallery-4.jpg"><img class="grid__container--grid-items" src="./assets/images/gallery/photo-gallery-4.jpg" alt=""></a></div>
+                                <div class="grid__container--grid-items-container"><a target="_blank" href="./assets/images/gallery/photo-gallery-5.jpg"><img class="grid__container--grid-items" src="./assets/images/gallery/photo-gallery-5.jpg" alt=""></a></div>
+                                <div class="grid__container--grid-items-container"><a target="_blank" href="./assets/images/gallery/photo-gallery-6.jpg"><img class="grid__container--grid-items" src="./assets/images/gallery/photo-gallery-6.jpg" alt=""></a></div>
+                                <div class="grid__container--grid-items-container"><a target="_blank" href="./assets/images/gallery/photo-gallery-7.jpg"><img class="grid__container--grid-items" src="./assets/images/gallery/photo-gallery-7.jpg" alt=""></a></div>
+                                <div class="grid__container--grid-items-container"><a target="_blank" href="./assets/images/gallery/photo-gallery-8.jpg"><img class="grid__container--grid-items" src="./assets/images/gallery/photo-gallery-8.jpg" alt=""></a></div>
+                                <div class="grid__container--grid-items-container"><a target="_blank" href="./assets/images/gallery/photo-gallery-9.jpg"><img class="grid__container--grid-items" src="./assets/images/gallery/photo-gallery-9.jpg" alt=""></a></div>
                             </div>
                         </image>
                     </header>
