bugfix | hover and scroll
hover on links and scroll over navbar corrected

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </a>
             </div>
         <ul class="navbar__list">
-            <li class ="navbar__list--item"><a class="navbar__list-item-link" href="biography">Biography</a></li>
-            <li class ="navbar__list--item"><a class="navbar__link-item-link" href="shows">Shows</a></li>
+            <li class ="navbar__list--item"><a href="biography">Biography</a></li>
+            <li class ="navbar__list--item"><a href="shows">Shows</a></li>
         </ul>
     </nav>
     <section class="hero__cover">
@@ -150,7 +150,9 @@
                             New York, NY 10012, USA
                         </p>
                         <p class="footer__container--text-modifier--subtext">
-                            info@thebeesknees.co 
+                            <a href="mailto:info@thebeesknees.com">
+                                info@thebeesknees.com 
+                            </a>
                         </p>
                     </div class="footer__container--text-modifier--items">
                     <div> 
@@ -165,7 +167,9 @@
                             USA / South America / Japan
                         </p>
                         <p class="footer__container--text-modifier--subtext">
-                            pearl.gregg@limitlessag.com 
+                            <a href="mailto:pearl.gregg@limitlessag.com">
+                                pearl.gregg@limitlessag.com 
+                            </a>
                         </p>
                     </div class="footer__container--text-modifier--items">  
                     <div> 
@@ -180,12 +184,16 @@
                             UK / EU / AU
                         </h4>
                         <p class="footer__container--text-modifier--subtext">
-                            cwhyte@archentertainment.com 
+                            <a href="mailto:cwhyte@archentertainment.com">
+                                cwhyte@archentertainment.com 
+                            </a>
                         </p>
                     </div>
                     <div class="footer__container--text-modifier--items--copyright">
-                    <img src="./assets/logos/logo-bandsite.svg" alt="">
-                    <p class="footer__container--text-modifier--subtext">
+                        <a href="./index.html">
+                            <img src="./assets/logos/logo-bandsite.svg" alt="">
+                        </a>
+                        <p class="footer__container--text-modifier--subtext">
                         Copyright The Bees Knees © 2021 All Rights Reserved
                     </p>
                     </div>
