feature | social media links

--- a/index.html
+++ b/index.html
@@ -132,9 +132,15 @@
                 <article>
                     <h2>Get in Touch</h2>
                     <div class="footer__container__social">
-                        <li><img class="footer__container__social--list-item" src="./assets/icons/svg/Icon-instagram.svg"></li>
-                        <li><img class="footer__container__social--list-item" src="./assets/icons/svg/Icon-facebook.svg"></li>
-                        <li><img class="footer__container__social--list-item" src="./assets/icons/svg/Icon-twitter.svg"></li>
+                        <a target="_blank" href="http://www.instagram.com">
+                            <li><img class="footer__container__social--list-item" src="./assets/icons/svg/Icon-instagram.svg"></li>
+                        </a>
+                        <a target="_blank" href="http://www.facebook.com">
+                            <li><img class="footer__container__social--list-item" src="./assets/icons/svg/Icon-facebook.svg"></li>
+                        </a>
+                        <a target="_blank" href="http://www.twitter.com">
+                            <li><img class="footer__container__social--list-item" src="./assets/icons/svg/Icon-twitter.svg"></li>
+                        </a>
                     </div>
                 </article>
                 <article>
