--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar__fix">
         <div class="navbar__logo">
             <a href="./index.html">
-                <img src="../assets/logos/logo-bandsite.svg"/>
+                <img src="./assets/logos/logo-bandsite.svg"/>
             </a>
             </div>
         <ul class="navbar__list">
