bugfix | Links correction

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -18,16 +18,16 @@
             <img src="../assets/logos/logo-bandsite.svg">
         </a>
         </div>
-    <ul class="navbar__list">
-        <li class ="navbar__list--item"><a role="link" aria-disabled="true">Biography</a></li>
-        <li class ="navbar__list--item"><a role="link" aria-disabled="true">Shows</a></li>
-    </ul>
+        <ul class="navbar__list">
+            <li class ="navbar__list--item"><a href="../index.html">Biography</a></li>
+            <li class ="navbar__list--item"><a href="./pages/shows.html">Shows</a></li>
+        </ul>
 </nav>
 <section class="hero__cover-b">
     <hero>
         <div class="hero__cover-b--organizer">
             <div class="hero__cover-b--organizer--item">
-            <h2 class="hero__cover-b--title">
+            <h2 class="hero__cover-b--title--pre-hero">
                 Beautiful Beasts Album
             </h2>
             <h1 class="hero__cover-b--title">
@@ -38,8 +38,8 @@
 
           <iframe 
             class="soundcloud"
-            width="400" 
-            height="166" 
+            width="300" 
+            height="120" 
             scrolling="no" 
             frameborder="no" 
             allow="autoplay" 
