bugfix | link correction

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -20,7 +20,7 @@
         </div>
         <ul class="navbar__list">
             <li class ="navbar__list--item"><a href="../index.html">Biography</a></li>
-            <li class ="navbar__list--item"><a href="./pages/shows.html">Shows</a></li>
+            <li class ="navbar__list--item"><a href="../pages/shows.html">Shows</a></li>
         </ul>
 </nav>
 <section class="hero__cover-b">
