--- a/pages/shows.html
+++ b/pages/shows.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/shows.css">
     <link rel="stylesheet" href="../styles/bio.css">
-    <link rel="stylesheet" href="../styles/partials/_global.css">
+    <link rel="stylesheet" href="../styles/global.css">
     <script src="../scripts/build-shows-page.js" defer></script>
     <title>container show</title>
 </head>
