--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles/bio.css">
     <script src="./scripts/index-page.js" defer></script>
 
-    <title>BANDSITE</title>
+    <title>BANDSITE | Biography </title>
 </head>
 
 <body>
