--- a/pages/shows.html
+++ b/pages/shows.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles/bio.css">
     <link rel="stylesheet" href="../styles/global.css">
     <script src="../scripts/build-shows-page.js" defer></script>
-    <title>container show</title>
+    <title>BANDSITE | Shows</title>
 </head>
 <body>
 
