--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </article>
 
 
-        <section class="comment__section">
+        <section class="comment__section" id="commentSection">
 
             <h2 class="comment--title">Join the Conversation</h2>
 
@@ -172,7 +172,7 @@
                     </div>
                 </form>
 
-                <div class="comments">
+                <div class="comments" id="comments">
                 </div>
 
             </div>
