WIP | sprint-3 start
Axios started
corrected comment section
shows are diyamic and styled

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/bio.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./scripts/index-page.js" defer></script>
+
 
     <title>BANDSITE</title>
 </head>
@@ -187,6 +189,7 @@
     <footer class="footer__container">
         <section class="footer__container--text-modifier">
             <article class="footer__container__header">
+            
                 <h2 class="footer__container__header--items">Get in Touch</h2>
                 <div class="footer__container__social footer__container__header--items">
                     <div class="footer__image--wrap">
@@ -204,6 +207,12 @@
                             <img class="footer__image--wrap--icons" src="./assets/icons/svg/Icon-twitter.svg">
                         </a>
                     </div>
+                </div>
+
+                <div class="footer__container--text-modifier--items--copyright--header">
+                    <a href="./index.html">
+                        <img src="./assets/logos/logo-bandsite.svg" alt="">
+                    </a>
                 </div>
             </article>
             <article class="footer__container--colum-modifier">
