--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- Link to custom JavaScript file -->
     <script src="./scripts/index-page.js" defer></script>
-    <!-- Set the title of the page -->
+    
+    <!-- personalized favicons from student-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<!-- Set the title of the page -->
     <title>BANDSITE</title>
 </head>
 
