feature | visual and code improvements
new placeholders for the avatars
favicons
all fonts same style and following global and _fonts variable

minor code updates
removed  console logs
updated my bem
passed on html code verifier
removed excessive repetition when desktop and tablet classes could be identical

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -36,15 +36,15 @@
         </ul>
     </nav>
     <!-- section for the hero cover -->
-    <section class="hero__cover-b">
-        <div class="hero__cover-b--organizer">
-            <div class="hero__cover-b--organizer--item">
+    <section class="hero__cover--b">
+        <div class="hero__cover--b--organizer">
+            <div class="hero__cover--b--organizer--item">
                 <!-- title of the hero section -->
-                <h2 class="hero__cover-b--title--pre-hero">
+                <h2 class="hero__cover--b--title--pre-hero">
                     Beautiful Beasts Album
                 </h2>
                 <!-- main heading of the hero section -->
-                <h1 class="hero__cover-b--title">
+                <h1 class="hero__cover--b--title">
                     Queen of Yellow</h1>
                 <!-- subheading of the hero section -->
                 <h1>
@@ -64,7 +64,7 @@
             <h1 class="show__title">Shows</h1>
         </div>
         <!-- container for the list of shows, to be populated by JavaScript -->
-        <div class="shows-container"></div>
+        <div class="shows__container"></div>
     </section>
 
     <!-- footer section -->
@@ -99,7 +99,7 @@
             <!-- first contact column -->
             <article class="footer__container--colum-modifier">
                 <div class="footer__container--text-modifier--items">
-                    <h3 class="footer__container--text-modifier--items--text-wrapper">
+                    <h3 class="footer__container--text-modifier--items--text-box">
                         Cam Adams
                         <br>
                         The Bees Knees Management
@@ -117,7 +117,7 @@
                 </div>
                 <!-- second contact column -->
                 <div class="footer__container--text-modifier--items">
-                    <h3 class="footer__container--text-modifier--items--text-wrapper">
+                    <h3 class="footer__container--text-modifier--items--text-box">
                         Pearl Gregg
                         <br>
                         Limitless Artist Group
@@ -135,7 +135,7 @@
                 </div>
                 <!-- third contact column -->
                 <div>
-                    <h3 class="footer__container--text-modifier--items--text-wrapper">
+                    <h3 class="footer__container--text-modifier--items--text-box">
                         Carson Whyte
                         <br>
                         ARCH Entertainment
